[gd_scene load_steps=2 format=3 uid="uid://d2hyge5j1fedg"]

[ext_resource type="Script" uid="uid://dinl6xedceycj" path="res://scripts/network_join_ui.gd" id="1_network_join"]

[node name="NetworkJoinUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = 66.0
offset_right = 80.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
script = ExtResource("1_network_join")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "联机游戏"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="IPLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "服务器IP地址:"

[node name="IPInput" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
placeholder_text = "例如: 192.168.1.100"

[node name="PortLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "端口 (默认7000):"

[node name="PortInput" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "7000"
placeholder_text = "7000"

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ConnectButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "连接"

[node name="CancelButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "取消"

[node name="StatusLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "请输入服务器IP地址"
horizontal_alignment = 1
